# OpenColorIO

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  habitat.yaml  habitat.yml  package.py
ext/sampleicc/src/include/: icProfileHeader.h
include/OpenColorIO/: OpenColorIO.h
share/cmake/modules/: Findyaml-cpp.cmake
share/cmake/modules/install/: InstallOpenEXR.cmake  InstallZLIB.cmake  Installexpat.cmake  Installminizip-ng.cmake  Installpybind11.cmake  Installpystring.cmake  Installyaml-cpp.cmake
src/OpenColorIO/: CMakeLists.txt  Config.cpp
src/OpenColorIO/ops/cdl/: CDLOpData.h
src/apps/ociodisplay/: CMakeLists.txt
src/apps/ocioperf/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt
src/core/: CMakeLists.txt
src/libutils/imageioapphelpers/: CMakeLists.txt
src/libutils/oglapphelpers/: CMakeLists.txt
src/pyglue/: CMakeLists.txt
tests/python/: ColorSpaceHelpersTest.py
weta_patches/: weta_quiet_header_warnings_snippet.h
